--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,15 +23,32 @@ android {
 }
 
 dependencies {
+    // files, jars
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    // androidx
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    // lifecyle
+    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.0.0"
+    // implementation "androidx.lifecycle:lifecycle-reactivestreams:$lifecycle_version" // add this when/if we use reactive streams with livedata
+
+    // room
+    implementation "androidx.room:room-runtime:2.1.0-alpha03"
+    annotationProcessor "androidx.room:room-compiler:2.1.0-alpha03"
+    // implementation "androidx.room:room-rxjava2:$room_version" // add this if/when we want to use RxJava with
+
+    // chatkit
+    implementation 'com.github.stfalcon:chatkit:0.3.3'
+
+    // butterknife
+    implementation 'com.jakewharton:butterknife:10.0.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
+
+    // tests
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-
-    implementation 'com.github.stfalcon:chatkit:0.3.3'
-
-    implementation 'com.jakewharton:butterknife:10.0.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
 }
