--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply from: "$project.rootDir/tools/script-lint.gradle"
 
 def getVersionCode = { ->
     try {
