--- a/tools/script-findbugs.gradle
+++ b/tools/script-findbugs.gradle
@@ -2,8 +2,8 @@ apply plugin: 'findbugs'
 
 task findbugs(type: FindBugs) {
     excludeFilter = file("$project.rootDir/tools/rules-findbugs.xml")
-    classes = fileTree("$project.buildDir/intermediates/classes/dev/debug/com/dd") + fileTree("$project.buildDir/intermediates/classes/prod/debug/com/dd")
-    source = fileTree("$project.rootDir/src/main/java/com/dd/")
+    classes = fileTree("$project.buildDir/intermediates/javac/debug") + fileTree("$project.buildDir/intermediates/javac/release")
+    source = fileTree("$project.rootDir/src/main/java")
     classpath = files()
 
     reports {
