--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,15 @@ allprojects {
     }
 }
 
+
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+task checkCode(type: GradleBuild) {
+    tasks = ['pmd', 'lintDebug', 'findbugs']
+}
+
+task checkTests(type: GradleBuild) {
+    tasks = ['testDebugUnitTest', 'connectedDebugAndroidTest']
 }
