--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,13 +16,16 @@ jobs:
     - run:
         name: Download Dependencies
         command: ./gradlew androidDependencies
+    - run:
+        name: Assemble debug build
+        command: ./gradlew clean assembleDebug -PdisablePreDex
+    - run:
+        name: Run code quality checks
+        command: ./gradlew checkCode
     - save_cache:
         paths:
         - ~/.gradle
         key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-    - run:
-        name: Run Tests
-        command: ./gradlew lint test
     - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
         path: app/build/reports
         destination: reports
