Use an input manager and create our first command

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,9 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.4'
     annotationProcessor 'org.projectlombok:lombok:1.18.4'
 
+    // string utils
+    implementation 'org.apache.commons:commons-lang3:3.7'
+
     // tests
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
