Add dagger2 support

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,13 @@ dependencies {
     // string utils
     implementation 'org.apache.commons:commons-lang3:3.7'
 
+    // Dagger 2 - https://google.github.io/dagger/
+    implementation "com.google.dagger:dagger-android:${rootProject.daggerVersion}"
+    implementation "com.google.dagger:dagger-android-support:${rootProject.daggerVersion}"
+    annotationProcessor "com.google.dagger:dagger-compiler:${rootProject.daggerVersion}"
+    annotationProcessor "com.google.dagger:dagger-android-processor:${rootProject.daggerVersion}"
+    testAnnotationProcessor "com.google.dagger:dagger-compiler:${rootProject.daggerVersion}"
+
     // tests
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
