--- a/chatkit/build.gradle
+++ b/chatkit/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
 
     defaultConfig {
         minSdkVersion 14
@@ -16,15 +16,10 @@ android {
     }
 }
 
-ext {
-    supportVersion = '27.1.1'
-    flexboxVersion = '1.0.0'
-}
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation "com.android.support:appcompat-v7:$supportVersion"
-    implementation "com.android.support:design:$supportVersion"
-    implementation "com.google.android:flexbox:$flexboxVersion"
+    implementation "androidx.appcompat:appcompat:1.1.0-alpha01"
+    implementation "com.google.android.material:material:1.1.0-alpha02"
+    implementation "com.google.android:flexbox:1.0.0"
 }
