--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     // androidx
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
+    implementation "androidx.recyclerview:recyclerview:1.0.0"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     // lifecyle
