--- a/chatkit/build.gradle
+++ b/chatkit/build.gradle
@@ -19,6 +19,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation "androidx.recyclerview:recyclerview:1.0.0"
     implementation "androidx.appcompat:appcompat:1.1.0-alpha01"
     implementation "com.google.android.material:material:1.1.0-alpha02"
     implementation "com.google.android:flexbox:1.0.0"
