--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,25 +55,24 @@ android {
 
 dependencies {
     // files, jars
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     // androidx
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
+    implementation "androidx.recyclerview:recyclerview:1.0.0"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     // lifecyle
-    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
-    implementation "androidx.lifecycle:lifecycle-common-java8:2.0.0"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-common-java8:2.0.0'
     // implementation "androidx.lifecycle:lifecycle-reactivestreams:$lifecycle_version" // add this when/if we use reactive streams with livedata
 
     // room
-    implementation "androidx.room:room-runtime:2.1.0-alpha03"
+    implementation 'androidx.room:room-runtime:2.1.0-alpha03'
     annotationProcessor "androidx.room:room-compiler:2.1.0-alpha03"
     // implementation "androidx.room:room-rxjava2:$room_version" // add this if/when we want to use RxJava with
 
     // chatkit
-    implementation 'com.github.stfalcon:chatkit:0.3.3'
-
+    implementation project(':chatkit')
     // butterknife for view binding
     implementation 'com.jakewharton:butterknife:10.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
